--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,13 +6,13 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto navbar-text mx-4">
 				<li class="nav-item mx-3">
-					<a class="nav-link active" aria-current="page" href="/">Home</a>
+					<a class="nav-link active" aria-current="page" href="/Weak1">Home</a>
 				</li>
 				<li class="nav-item mx-3">
-					<a class="nav-link" href="/about.php">About us</a>
+					<a class="nav-link" href="/Weak1/about.php">About us</a>
 				</li>
 				<li class="nav-item mx-3">
-					<a class="nav-link" href="/create_profile.php">Create Profile</a>
+					<a class="nav-link" href="/Weak1/create_profile.php">Create Profile</a>
 				</li>
 			</ul>
 		</div>
